vendor 11 and 12 spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1047,7 +1047,7 @@ a.btn {
 
 
 	/* Vendors */
-	#vendors .blk-02, #vendors .blk-03, #vendors .blk-05,  #vendors .blk-06, #vendors .blk-08, #vendors .blk-09, #vendors .blk-10,  #vendors .blk-012 {
+	#vendors .blk-02, #vendors .blk-03, #vendors .blk-05,  #vendors .blk-06, #vendors .blk-08, #vendors .blk-09, #vendors .blk-11,  #vendors .blk-12 {
 		margin-left: 12%;
 	}
 	#vendors .blk-04, #vendors .blk-07, #vendors .blk-10 {
